--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,5 @@
-APScheduler==3.6.3
-cachetools==4.2.2
-certifi==2025.8.3
-charset-normalizer==3.4.2
-idna==3.10
+greenlet==3.2.4
+psycopg2-binary==2.9.10
 python-dotenv==1.1.1
-pytz==2025.2
-requests==2.32.4
-six==1.17.0
-tornado==6.1
-tzdata==2025.2
-tzlocal==5.3.1
-urllib3==2.5.0
+SQLAlchemy==2.0.43
+typing_extensions==4.14.1
